# ai-academician

./: .env.example  .gitignore  CLAUDE.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  LICENSE  README.md  SECURITY.md  pyproject.toml
.github/: FUNDING.yml  PULL_REQUEST_TEMPLATE.md
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
history/prompts/001-multi-agent-research/: 001-ai-academician-spec-creation.spec.prompt.md
specs/001-multi-agent-research/: plan.md  spec.md  tasks.md
specs/001-multi-agent-research/checklists/: requirements.md
src/: __init__.py  config.py  main.py  orchestrator.py
src/agents/: __init__.py  base.py  body_writer.py  editor.py  intro_writer.py  planner.py  research_agent.py  reviewer.py  source_finder.py  summarizer.py
src/citations/: __init__.py  apa.py  base.py  chicago.py  harvard.py  ieee.py  mla.py
src/export/: __init__.py  base.py  docx_exporter.py  latex_exporter.py  pdf_exporter.py
src/llm/: __init__.py  base.py  claude_provider.py  gemini_provider.py  huggingface_provider.py  openai_provider.py
src/models/: __init__.py  citation.py  paper.py  review.py  session.py  source.py
src/search/: __init__.py  arxiv_search.py  google_search.py
src/storage/: __init__.py  database.py  file_manager.py
src/utils/: __init__.py  logger.py  retry.py  text_utils.py
tests/: __init__.py
